--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,10 +6,19 @@ li{
     padding: 5px 5px 5px 15px;
     margin-bottom: 5px;
 }
-a{
+li a{
     color: black;
 }
-a:hover{
-    color: black;
+.navegacao{
+    width: 100%;
+    height: 80px;
+    background: #2a475e;
+    color: aliceblue;
+}
+.navegacao a{
+    color: aliceblue;
+}
+.navegacao a:hover{
+    color: rgb(202, 214, 224);
     text-decoration: none;
 }
